fix: increase grid gap so list items dont get cut off

--- a/components/ProjectList/styles.module.scss
+++ b/components/ProjectList/styles.module.scss
@@ -28,11 +28,11 @@
 .masonry {
   display: grid;
   grid-template-columns: repeat(2, minmax(100px, 1fr));
-  grid-gap: 5px 1rem;
+  grid-gap: 10px 1rem;
   grid-auto-rows: 0;
 
   @media (min-width: 768px) {
-    grid-gap: 5px 2rem;
+    grid-gap: 10px 2rem;
   }
 
   @media (min-width: 1024px) {
